@@ -160,5 +160,9 @@ N: Arfrever Frehtes Taifersar Arahesis
 E: arfrever.fta@gmail.com
 D: issue 239
 
-N tlockert
+N: tlockert
 D: issue 238
+
+N: Juan J. Martinez
+E: juan@memset.com
+D: issue 263
